--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <h1>My Pokedex</h1>
+    <ul class="pokemon_list"></ul>
     <script src="./js/scripts.js"></script>
   </body>
 </html>
