--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1>My Pokedex</h1>
+    <h2 id="loading_time"></h2>
     <ul class="pokemon_list"></ul>
     <script src="./js/scripts.js"></script>
   </body>
